--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -523,7 +523,7 @@ body {
 .about { padding-block-start: 0; }
 
 .about-banner {
-  background-color: var(--light-gray);
+  background-color: transparent;
   max-width: max-content;
   aspect-ratio: 450 / 590;
   margin-block-end: 40px;
@@ -1001,6 +1001,7 @@ body {
     transform: translateY(-50%);
     right: 0;
     border-radius: var(--radius-4);
+    border: #99edc3 solid 5px;;
   }
 
 
@@ -1085,6 +1086,7 @@ body {
     top: 15%;
     left: -120px;
     border-radius: var(--radius-4);
+  border: #99edc3 5px solid;
     
   }
 
@@ -1328,6 +1330,7 @@ body {
   .header.active { padding-block: 15px; }
 
   .header.header-anim { animation: slide-in 1s ease forwards; }
+  
 
   @keyframes slide-in {
     0% { transform: translateY(-100%); }
@@ -1539,4 +1542,12 @@ outline: #99edc3 solid 4px;
 /* WELOCME SECTION*/
 .course{
   margin-bottom: 30px;
+}
+/* media query for about us*/
+@media screen and (max-width:770px) {
+  .abs-img-1, .abs-img-2
+ {
+display: none;
+ }
+ 
 }
